# 2d-game-engine

./: CMakeLists.txt  README.md  flake.nix
assets/scripts/: external.lua  level1.lua  script.lua
src/: CMakeLists.txt  game.cpp  game.h  logger.h  main.cpp
src/asset_store/: asset_store.cpp  asset_store.h
src/components/: animation_component.h  box_collider_component.h  camera_follow_component.h  health_component.h  keyboard_controlled_component.h  projectile_component.h  projectile_emitter_component.h  rigid_body_component.h  script_component.h  sprite_component.h  text_label_component.h  transform_component.h
src/ecs/: ecs.cpp  ecs.h
src/event_bus/: event.h  event_bus.h
src/events/: collision_event.h  key_pressed_event.h
src/game/: game.cpp  game.h  level_loader.cpp  level_loader.h
src/logger/: logger.cpp
src/systems/: animation_system.h  camera_movement_system.h  collision_system.h  damage_system.h  keyboard_control_system.h  movement_system.h  projectile_emit_system.h  projectile_lifecycle_system.h  render_collider_system.h  render_gui_system.h  render_health_bar_system.h  render_system.h  render_text_system.h  script_system.h
